--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,13 @@
   padding: 0;
   margin: 0;
   color: white;
-  background-color: black;
+}
+
+
+
+body
+{
+  background-image: linear-gradient(black, rgb(22, 22, 22),rgb(78, 78, 78))
 }
 
 a {
