--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,7 +16,7 @@
 
 .navbar img {
   margin: 10px;
-  width: 2%;
+  width: 18%;
   height: auto;
 }
 
@@ -79,6 +79,31 @@
   padding: 2px;
   border-radius: 10px;
   object-fit: cover;
+}
+
+.weatherUI{
+  height: 55vh;
+}
+
+.weatherHead{
+  display: center;
+  text-align: center;
+  color: white;
+  padding: 1%;
+}
+
+.weatherItem {
+  padding: 4%;
+  width: 16vw;
+  background-color: #6793d696;
+  border-radius: 10px;
+}
+
+.weatherList{
+  display: flex;
+  justify-content: space-between;
+  padding: 5%;
+  color: white;
 }
 
 .footer {
