--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,19 @@ a {
   text-decoration: none;
   color: white;
 }
+
+button {
+  background-color: rgb(8, 8, 8);
+  color: white;
+  border: solid gray 2px;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+input {
+  background-color: rgb(8, 8, 8);
+  color: white;
+  border: solid gray 2px;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
