--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -28,7 +28,7 @@
 }
 
 .hero h1 {
-  font-size: 30px;
+  font-size: 32px;
   padding-bottom: 10px;
 }
 
@@ -60,12 +60,12 @@
 .container {
   display: flex;
   justify-content: space-between;
-  padding: 10%;
+  padding: 8%;
 }
 
 
 .card {
-  width: 18vw;
+  width: 15vw;
   padding: 20px;
   border: 3px solid #ccc;
   border-radius: 10px;
@@ -115,6 +115,32 @@
   padding-bottom: 10%;
 }
 
+.newsItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 2%;
+  margin: 2%;
+  background-color: #2d2d2d;
+  border-radius: 10px;
+  box-shadow: black;
+  color: gainsboro;
+}
+
+.newsItem a{
+  color: rgb(118, 170, 249);
+}
+
+.newsImage {
+  width: 20%;
+  height: auto;
+}
+
+.newsImage img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
 .footer {
   position: absolute;
   width: 100%;
@@ -129,6 +155,15 @@
 }
 
 @media (max-width: 720px) {
+  .hero h1 {
+    padding-top: 25px;
+    font-size: 24px;
+  }
+
+  .techBlock h2 {
+    font-size: 25px;
+  }
+
 	.container {
     flex-direction: column;
     justify-content: center;
@@ -156,5 +191,24 @@
   .weatherItem {
     width: 80vw;
     margin-bottom: 10%;
+  }
+
+  .newsItem {
+    font-size: x-small;
+    padding: 4%;
+    margin-bottom: 7%;
+  }
+  
+  .newsImage {
+    width: 60%;
+    height: auto;
+    display: flex;
+    align-items: center;
+  }
+  
+  .newsImage img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
   }
 }
