--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+/*Global CSS für alle Seiten (auch webex2)*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -6,14 +7,14 @@
 
 body
 {
-  background-image: linear-gradient(black, rgb(22, 22, 22),rgb(78, 78, 78));
+  background-image: linear-gradient(black, rgb(22, 22, 22),rgb(78, 78, 78)); /*Schöner Hintergrund*/
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none; /*Text Dekoration anpassen*/
   color: white;
 }
-
+/*Schöner Button*/
 button {
   background-color: rgb(8, 8, 8);
   color: white;
@@ -21,7 +22,7 @@ button {
   padding: 10px 20px;
   border-radius: 10px;
 }
-
+/*Schöner Input*/
 input {
   background-color: rgb(8, 8, 8);
   color: white;
