--- a/src/app/webex2/DHBWWebEngineering.css
+++ b/src/app/webex2/DHBWWebEngineering.css
@@ -1,71 +1,82 @@
-/* ----------------------------------------------------------------------------
-   Base Default Setting
-------------------------------------------------------------------------------*/
-* {margin:0;padding:0;box-sizing: border-box;}
-header,footer {color: white;  background-color: black; padding:1em;width:100%;}
-nav,header {width:100%;}
-/* a nice card layout (as modern frameworks show as well)                     */
-.card {background-color: white; border-radius: 5px; margin:10px;
-       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);padding:1rem;}
-/* -----------------------------------------------------------------------------
-  Define the viewport (visible page) as CSS Grid
-  The Grid consists of the Header, the Navigation ,
-  the scrollable Part (youTube, Fakultäten) and the footer
-  In this case the Grid has four rows (height = auto) and 1 column with a
-  width of 100 %
-  The Header, the youTube and the Fakultäten become a flexbox
-  ----------------------------------------------------------------------------  */
-.pagegridcontainer {display:grid;
-    grid-template-columns: 100%;
-    grid-template-rows: auto;
-    justify-items: stretch;
-    align-items: stretch;
-    grid-template-areas:
-    "header"
-    "navigation"
-    "scroller"
-    "footer";
-  }
-  .pagegridheader {grid-area: header}
-  .pagegridnavigation {grid-area: navigation}
-  .pagegridsrcol  {grid-area: scroller}
-  .pagegridsfooter  {grid-area: footer}
-/* -----------------------------------------------------------------------------
-   The following statements are examples of flex-box classes, of course you can
-   build your own
--------------------------------------------------------------------------------- */
-    .flexboxheader,.flexboxnav,.flexFakultaet {display:flex; flex-flow: row wrap;}
-    .flexboxheader,.flexFakultaet {justify-content: space-between; align-items: center;}
-    .flexFakultaet {justify-content: space-between; align-items: stretch;}
-    .flexboxnav {justify-content: flex-end;}
-    .flexyouTube {display: flex; flex-flow:column;}
-/*------------------------------------------------------------------------------
-/* Navigation Bar
--------------------------------------------------------------------------------*/
-nav {background:darkgrey;}
-nav li {list-style-type: none; text-align: center;}
-/* Give each even list item the color #848d9e; and each odd #e2e4e8;            */
-nav li:nth-child(2n) {background: #848d9e;}
-nav li:nth-child(2n+1) {background: #e2e4e8;}
-/* Take the rest as it is or modify to improve.. this is up to you              */
-nav li:hover {background-color:white;}
-nav li a { text-decoration: none; display:block; padding:1.2rem; color: yellow; font-weight: bold;}
+/*CSS nur für Javascript 2 Aufgabe (aus CSS Aufgabe)*/
+* {
+  margin:0;padding:0;box-sizing: border-box;
+}
+header,footer {
+  color: white;  background-color: black; padding:1em;width:100%;
+}
+nav,header {
+  width:100%;
+}
+.card {
+  background-color: white; border-radius: 5px; margin:10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);padding:1rem;
+}
+.pagegridcontainer {
+  display:grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  justify-items: stretch;
+  align-items: stretch;
+  grid-template-areas:
+  "header"
+  "navigation"
+  "scroller"
+  "footer";
+}
+.pagegridheader {grid-area: header}
+.pagegridnavigation {grid-area: navigation}
+.pagegridsrcol  {grid-area: scroller}
+.pagegridsfooter  {grid-area: footer}
+
+.flexboxheader,.flexboxnav,.flexFakultaet {display:flex; flex-flow: row wrap;}
+.flexboxheader,.flexFakultaet {justify-content: space-between; align-items: center;}
+.flexFakultaet {justify-content: space-between; align-items: stretch;}
+.flexboxnav {justify-content: flex-end;}
+.flexyouTube {display: flex; flex-flow:column;}
+
+nav {
+  background:darkgrey;
+}
+nav li {
+  list-style-type: none; text-align: center;
+}
+
+nav li:nth-child(2n) {
+  background: #848d9e;
+}
+nav li:nth-child(2n+1) {
+  background: #e2e4e8;
+}
+
+nav li:hover {
+  background-color:white;
+}
+nav li a { 
+  text-decoration: none; display:block; padding:1.2rem; color: yellow; font-weight: bold;
+}
 td a {color: blue;}
-/* -----------------------------------------------------------------------------
-YouTube Section
---------------------------------------------------------------------------------*/
-.youTube  {padding:2rem;background-color: #8282064d}
-/* -----------------------------------------------------------------------------
-Fakultäten
---------------------------------------------------------------------------------*/
-.Fakultaeten {background-color: white;}
-.FakultaetTitel {font-size:1.8rem;color:white;text-align: center; padding:2rem;width:100%;background-color:#2b0361;}
-.FakultaetBild {min-width:150px;max-width: 100%; flex-grow: 1}
-.FakultaetBild > img {width:100%;}
-.FakultaetBeschreibung {min-width:150px;max-width: 100%; flex-grow: 2}
-/* MQ for changing the styles a (not the layout !!)
-/* For mobile phones: */
-/* For Handy  10 width to 450 */
+
+.youTube  {
+  padding:2rem;background-color: #8282064d
+}
+
+.Fakultaeten {
+  background-color: white;
+}
+.FakultaetTitel {
+  font-size:1.8rem;color:white;text-align: center; padding:2rem;width:100%;background-color:#2b0361;
+}
+.FakultaetBild {
+  min-width:150px;max-width: 100%; flex-grow: 1
+}
+.FakultaetBild > img {
+  width:100%;
+}
+.FakultaetBeschreibung {
+  min-width:150px;max-width: 100%; flex-grow: 2
+}
+
 @media only screen and (min-width: 10px) {
   header span {font-size: 1rem;padding-right:1.0rem}
   nav li {flex: 1 1 100%;}
